--- a/configuration/picom.conf
+++ b/configuration/picom.conf
@@ -1,4 +1,39 @@
 #################################
+#          Animations           #
+#################################
+# requires https://github.com/jonaburg/picom
+transition-length = 400
+transition-pow-x = 0.2
+transition-pow-y = 0.2
+transition-pow-w = 0.2
+transition-pow-h = 0.2
+size-transition = true
+
+
+#################################
+#             Corners           #
+#################################
+# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
+corner-radius = 25.0;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "class_g = 'awesome'",
+  # "class_g = 'URxvt'",
+  # "class_g = 'XTerm'",
+  # "class_g = 'kitty'",
+  # "class_g = 'Alacritty'",
+  "class_g = 'Polybar'",
+  "class_g = 'code-oss'",
+  "class_g = 'TelegramDesktop'",
+  "class_g = 'firefox'",
+  "class_g = 'Thunderbird'"
+];
+round-borders = 1;
+round-borders-exclude = [
+  "class_g = 'TelegramDesktop'",
+];
+
+#################################
 #             Shadows           #
 #################################
 
@@ -15,15 +50,15 @@ shadow = true;
 shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -10;
+shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -10;
+shadow-offset-y = -7;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -62,11 +97,13 @@ shadow-offset-y = -10;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  #"name = 'Notification'",
+  #"class_g = 'Conky'",
+  #"class_g ?= 'Notify-osd'",
+  #"class_g = 'Cairo-clock'",
+  #"class_g = 'slop'",
+  #"class_g = 'Polybar'",
+  #"_GTK_FRAME_EXTENTS@:c"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -88,7 +125,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -99,16 +136,19 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+# don't need this, we disable fading for all normal windows with wintypes: {}
+fade-exclude = [
+  #"class_g = 'slop'"   # maim
+]
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = false
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
+no-fading-destroyed-argb = false
 
 
 #################################
@@ -118,28 +158,38 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1.0;
+inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.95;
+frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0
+menu-opacity = 1.0 
+# menu-opacity is depreciated use dropdown-menu and popup-menu instead.
+
+#If using these 2 below change their values in line 510 & 511 aswell
+popup_menu = { opacity = 1.0; }
+dropdown_menu = { opacity = 1.0; }
+
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = true;
+inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 1.0
+active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-#focus-exclude = [ "class_g = 'Termite'" ];
+focus-exclude = [
+  # "class_g = 'Cairo-clock'",
+  # "class_g = 'Bar'",                    # lemonbar
+  # "class_g = 'slop'"                    # maim
+];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -150,6 +200,23 @@ active-opacity = 1.0
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
+#
+# opacity-rule = []
+opacity-rule = [
+  "80:class_g     = 'Bar'",             # lemonbar
+  "100:class_g    = 'slop'",            # maim
+  "100:class_g    = 'XTerm'",
+  "100:class_g    = 'URxvt'",
+  "100:class_g    = 'kitty'",
+  #"100:class_g    = 'Alacritty'",
+  "80:class_g     = 'Polybar'",
+  "100:class_g    = 'code-oss'",
+  "100:class_g    = 'Meld'",
+  "70:class_g     = 'TelegramDesktop'",
+  "90:class_g     = 'Joplin'",
+  "100:class_g    = 'firefox'",
+  "100:class_g    = 'Thunderbird'"
+];
 
 
 #################################
@@ -167,18 +234,18 @@ active-opacity = 1.0
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+# blur-background = true;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+# blur-background-frame = false;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+# blur-background-fixed = false;
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -186,16 +253,34 @@ active-opacity = 1.0
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-blur-kern = "3x3box";
+# blur-kern = "3x3box";
 
+blur: {
+  # requires: https://github.com/ibhagwan/picom
+  method = "dual_kawase";
+  #method = "kernel";
+  strength = 5;
+  # deviation = 1.0;
+  # kernel = "11x11gaussian";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
+}
 
 # Exclude conditions for background blur.
-# blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
+  #"window_type = 'dock'",
+  #"window_type = 'desktop'",
+  #"class_g = 'URxvt'",
+  #
+  # prevents picom from blurring the background
+  # when taking selection screenshot with `main`
+  # https://github.com/naelstrof/maim/issues/130
+  "class_g = 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
+
 
 #################################
 #       General Settings        #
@@ -206,8 +291,11 @@ blur-background-exclude = [
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
-
+#
+experimental-backends = true;
 backend = "glx";
+#backend = "xrender";
+
 
 # Enable/disable VSync.
 # vsync = false
@@ -260,7 +348,7 @@ refresh-rate = 60
 
 # Unredirect all windows if a full-screen opaque window is detected, 
 # to maximize performance for full-screen windows. Known to cause flickering 
-# when redirecting/unredirecting windows.
+# when redirecting/unredirecting windows. paint-on-overlay may make the flickering less obvious.
 #
 # unredir-if-possible = false
 
@@ -321,7 +409,9 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+#use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
+#Changing use-damage to false fixes the problem
+use-damage = false
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
@@ -364,7 +454,7 @@ use-damage = true
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "warn";
+log-level = "info";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr. 
@@ -412,7 +502,8 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  normal = { fade = true; shadow = false; }
+  tooltip = { fade = true; shadow = true; opacity = 1.00; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1.0; }
