picom config update

--- a/configuration/picom.conf
+++ b/configuration/picom.conf
@@ -9,7 +9,6 @@ transition-pow-w = 0.2
 transition-pow-h = 0.2
 size-transition = true
 
-
 #################################
 #             Corners           #
 #################################
@@ -25,8 +24,8 @@ rounded-corners-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'chromium'",
+  "class_g = 'Thunderbird'",
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -43,7 +42,7 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -97,13 +96,13 @@ shadow-offset-y = -7;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  #"name = 'Notification'",
-  #"class_g = 'Conky'",
-  #"class_g ?= 'Notify-osd'",
-  #"class_g = 'Cairo-clock'",
-  #"class_g = 'slop'",
-  #"class_g = 'Polybar'",
-  #"_GTK_FRAME_EXTENTS@:c"
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "class_g = 'slop'",
+  "class_g = 'Polybar'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -124,7 +123,6 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
@@ -171,7 +169,6 @@ menu-opacity = 1.0
 #If using these 2 below change their values in line 510 & 511 aswell
 popup_menu = { opacity = 1.0; }
 dropdown_menu = { opacity = 1.0; }
-
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -260,7 +257,7 @@ blur: {
   method = "dual_kawase";
   #method = "kernel";
   strength = 5;
-  # deviation = 1.0;
+  deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
   background-frame = false;
@@ -281,25 +278,21 @@ blur-background-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-
 #################################
 #       General Settings        #
 #################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
+daemon = true;
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
 experimental-backends = true;
 backend = "glx";
-#backend = "xrender";
-
 
 # Enable/disable VSync.
-# vsync = false
-vsync = true
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -329,8 +322,7 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will 
 # try detecting this with X RandR extension.
 #
-# refresh-rate = 60
-refresh-rate = 60
+refresh-rate = 0;
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -362,14 +354,14 @@ refresh-rate = 60
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true
+detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true
+detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels. 
 # A positive value enlarges it while a negative one shrinks it. 
@@ -407,11 +399,9 @@ detect-client-leader = true
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
-#
-# no-use-damage = false
-#use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
-#Changing use-damage to false fixes the problem
-use-damage = false
+# use-damage = true (Causing Weird Black semi opaque rectangles when terminal is opened)
+# Changing use-damage to false fixes the problem
+use-damage = false;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
@@ -502,10 +492,10 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = true; shadow = false; }
+  normal = { fade = true; shadow = false; full-shadow = false; }
   tooltip = { fade = true; shadow = true; opacity = 1.00; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 1.0; }
-  dropdown_menu = { opacity = 1.0; }
+  popup_menu = { opacity = 1.0; shadow = false; }
+  dropdown_menu = { opacity = 1.0; shadow = false; }
 };
