--- a/configuration/picom.conf
+++ b/configuration/picom.conf
@@ -2,34 +2,28 @@
 #          Animations           #
 #################################
 # requires https://github.com/jonaburg/picom
-transition-length = 400
-transition-pow-x = 0.2
-transition-pow-y = 0.2
-transition-pow-w = 0.2
-transition-pow-h = 0.2
-size-transition = true
+transition-length = 400;
+transition-pow-x = 0.2;
+transition-pow-y = 0.2;
+transition-pow-w = 0.2;
+transition-pow-h = 0.2;
+size-transition = true;
 
 #################################
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 25.0;
+corner-radius = 0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
-  # "class_g = 'URxvt'",
-  # "class_g = 'XTerm'",
-  # "class_g = 'kitty'",
-  # "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  "class_g = 'TelegramDesktop'",
-  "class_g = 'chromium'",
-  "class_g = 'Thunderbird'",
+  "class_g = 'Rofi'",
+  "class_g = 'Chromium'",
 ];
 round-borders = 1;
 round-borders-exclude = [
-  "class_g = 'TelegramDesktop'",
+
 ];
 
 #################################
@@ -42,21 +36,18 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 10;
+shadow-radius = 8;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 shadow-opacity = .75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
 shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
 shadow-offset-y = -7;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
@@ -127,11 +118,11 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.05;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.05;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 fade-delta = 10
@@ -161,10 +152,6 @@ inactive-opacity = 0.8;
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 frame-opacity = 0.7;
-
-# Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-menu-opacity = 1.0 
-# menu-opacity is depreciated use dropdown-menu and popup-menu instead.
 
 #If using these 2 below change their values in line 510 & 511 aswell
 popup_menu = { opacity = 1.0; }
@@ -254,7 +241,7 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
+  method = "kawase";
   #method = "kernel";
   strength = 5;
   deviation = 1.0;
@@ -492,7 +479,7 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = true; shadow = false; full-shadow = false; }
+  normal = { fade = true; shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 1.00; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
